--- a/seungyeop/maxnum_0518.ipynb
+++ b/seungyeop/maxnum_0518.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 가장 큰 수\n",
+    "https://programmers.co.kr/learn/courses/30/lessons/42746"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,41 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solution(numbers):\n",
-    "    answer = 0\n",
-    "    str_numbers = list(map(str, numbers))\n",
-    "    ex_numbers = sorted(str_numbers, key=lambda x: int(x[0]), reverse=True)\n",
-    "    \n",
-    "    print(ex_numbers)\n",
-    "    answer = \"\".join(ex_numbers)\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solution(numbers):\n",
-    "    answer = 0\n",
-    "    str_numbers = list(map(str, numbers))\n",
-    "    temp = []\n",
-    "    \n",
-    "    for \n",
-    "    \n",
-    "    print(ex_numbers)\n",
-    "    answer = \"\".join(ex_numbers)\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,11 +30,9 @@
     "        st = str(value)\n",
     "        stri = st*3\n",
     "        numberStr.append([stri,i])\n",
-    "    print(numberStr)\n",
     "\n",
     "    numberStr.sort(reverse=True)\n",
-    "    \n",
-    "    print(numberStr)\n",
+    "\n",
     "    for i,value in enumerate(numberStr):\n",
     "        index = value[1]\n",
     "        answer += str(numbers[index])\n",
@@ -75,24 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['333', 0], ['303030', 1], ['343434', 2], ['555', 3], ['999', 4]]\n",
-      "[['999', 4], ['555', 3], ['343434', 2], ['333', 0], ['303030', 1]]\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'9534330'"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,9 +70,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "9534330"
-   ]
+   "source": []
   }
  ],
  "metadata": {
