--- a/seungyeop/stock_0523.ipynb
+++ b/seungyeop/stock_0523.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 스택/큐_주식가격\n",
+    "https://programmers.co.kr/learn/courses/30/lessons/42584"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -11,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,30 +35,29 @@
     "            cnt = 0\n",
     "            for j in range(i+1, len(prices)):\n",
     "                cnt = cnt + 1 \n",
-    "                if j == len(prices)-1:\n",
-    "                    answer.append(cnt)\n",
-    "                \n",
-    "\n",
     "\n",
     "                if prices[i] > prices[j]:\n",
     "                    answer.append(cnt)\n",
     "                    break\n",
+    "                    \n",
+    "                if j == len(prices)-1:\n",
+    "                    answer.append(cnt)\n",
     "        \n",
     "    return answer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[4, 3, 2, 1, 0]"
+       "[4, 3, 1, 1, 0]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,33 +65,6 @@
    "source": [
     "solution(prices)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(prices)-0-1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
