--- a/seungyeop/0528_target number.ipynb
+++ b/seungyeop/0528_target number.ipynb
@@ -1,31 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "-1+1+1+1+1 = 3\n",
-    "+1-1+1+1+1 = 3\n",
-    "+1+1-1+1+1 = 3\n",
-    "+1+1+1-1+1 = 3\n",
-    "+1+1+1+1-1 = 3"
+    "# 깊이/너비 우선 탐색_타겟 넘버\n",
+    "https://programmers.co.kr/learn/courses/30/lessons/43165"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -65,30 +46,6 @@
     "\n",
     "solution(numbers, target)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dfs_recursive(graph, start, visited=[]):\n",
-    "    \n",
-    "    visited.append(start) ## ★★★★★\n",
-    "    \n",
-    "    for node in graph[start]:\n",
-    "        if node not in visited:\n",
-    "            dfs_recursive(graph, node, visited) ## ★★★★★\n",
-    "    \n",
-    "    return visited\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
